--- a/_03-02_signature.qmd
+++ b/_03-02_signature.qmd
@@ -1,11 +1,6 @@
-Thank you for considering this report in your evaluation of {{< var mr_mrs >}} {{< var last_name >}}. I am available to provide further information or clarification as needed.
+It was a pleasure to work with {{< var patient >}}. I am available to provide further information or clarification as needed.
 
-Respectfully submitted,
-
-<!-- It was a pleasure to work with {{< var patient >}}.
-Please contact me with any questions or concerns regarding this patient. -->
-
-<!-- Sincerely, -->
+Sincerely,
 
 ```{r}
 #| label: signature
@@ -14,7 +9,7 @@ Please contact me with any questions or concerns regarding this patient. -->
 #| echo: false
 #| eval: true
 
-sig_path <- file.path("src/img/jwt_sig.png")
+sig_path <- file.path(here::here("src", "img", "jwt_sig.png"))
 knitr::include_graphics(sig_path)
 # knitr::include_graphics("jwt_sig.png")
 ```
