a few more changes

--- a/_03-03_appendix.qmd
+++ b/_03-03_appendix.qmd
@@ -8,13 +8,12 @@ Throughout my career, I have held several prestigious positions, including Direc
 
 My research endeavors have been prolific, resulting in several publications in high-impact scientific journals. These studies have focused on the trajectory of symptom stability and neuropsychological functioning from early childhood to young adulthood in individuals with ADHD, contributing valuable insights to the field [@De2008; @Miller2006; @Trampush2009; @bedardPerceptualMotorInhibition2010; @HalperinTrampush2008; @rajendranAssociationVariationNeuropsychological2013; @trampushModeratorEffectsWorking2014]. In my clinical capacity, I have conducted over 200 neurocognitive and psychodiagnostic evaluations of ADHD and related neuropsychiatric syndromes, covering a diverse range of ages, genders, ethnicities, and comorbidities. This extensive experience underscores my commitment to advancing our understanding and treatment of neuropsychological disorders.
 
-
 ## Test Selection Procedures
 
 Neuropsychological tests are intrinsically performance-based, and cognitive performance assessed during this examination is summarized above.
 Where appropriate, qualitative observations are included.
 Cultural considerations were made when selecting measures, interpreting results, and making diagnostic impressions and recommendations.
-Results from formal tests are reported in comparison to other individuals the same age and sex/gender as range of functioning (e.g., Below { range }, { range }, Above { range }).[@guilmetteAmericanAcademyClinical2020]
+Results from formal tests are reported in comparison to other individuals the same age and sex/gender as range of functioning (e.g., below average, average, above average).[@guilmetteAmericanAcademyClinical2020]
 Test score labels are intended solely to be descriptive, identifying positions of scores relative to a normal curve distribution, and should be interpreted within the context of the patient's individual presentation and history.
 Although standardized scores provide the clinician with an important and necessary understanding of the patient's test performance compared with a normative group, they do not on their own lead to accurate diagnosis or treatment recommendations.
 
@@ -43,7 +42,7 @@ Although standardized scores provide the clinician with an important and necessa
 )
 
 #three-line-table[
-|*Range*|*Standard Score*|*T-Score*|*Scaled Score*|*z-Score*|*Percentile (‰)*|
+|*Range*|*Standard Score*|*_T_ Score*|*Scaled Score*|*z-Score*|*Percentile (‰)*|
 |---|---|---|---|---|---|
 |Exceptionally high score|130 +|70 +|16 +|2 +|98 +|
 |Above average score|120 – 129|63 – 69|14 – 15|1.3 – 1.9|91 – 97|
