--- a/src/rmd/pluck_nabs.Rmd
+++ b/src/rmd/pluck_nabs.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Pluck Tables from NAB-Screener (NAB-S)"
 params:
-  patient: Daniel
+  patient: Macdonald
   test:
     label: "Test"
     value: nabs
@@ -12,10 +12,10 @@ params:
       - nab
   test_name:
     label: "Test Name"
-    value: NAB
+    value: NAB-S
     input: select
     multiple: no
-    choices: [NAB, NAB-S]    
+    choices: [NAB, NAB-S]
   file:
     label: "No file selected"
     value: file
@@ -210,11 +210,8 @@ output:
 ## Load libraries
 
 ```{r setup, include = FALSE}
-Sys.setenv(
-  JAVA_HOME =
-    "/Library/Java/JavaVirtualMachines/graalvm-community-openjdk-22.0.1+8.1/Contents/Home"
-)
-options(java.parameters = "-Xmx16000m")
+Sys.setenv(JAVA_HOME = "/Library/Java/JavaVirtualMachines/graalvm-community-openjdk-22.0.1+8.1/Contents/Home")
+# options(java.parameters = "-Xmx16000m")
 knitr::opts_chunk$set(
   root.dir = normalizePath("./"),
   echo = TRUE,
@@ -222,54 +219,37 @@ knitr::opts_chunk$set(
   warning = FALSE,
   error = TRUE
 )
-library(tidytable)
-library(bwu)
+library(fs)
+library(glue)
 library(hablar)
 library(here)
+library(knitr)
 library(magrittr)
-library(readr)
+library(miniUI)
+library(pdftools)
 library(rJava)
 library(rmarkdown)
 library(rmdformats)
 library(shiny)
+library(snakecase)
 library(tabulapdf)
-library(tabulapdfjars)
-library(tibble)
-library(tidyr)
-library(dplyr)
+library(tidyverse)
+library(xfun)
+library(bwu)
 ```
 
-## Patient
+## Parameters
 
-```{r patient}
+```{r}
+# source("pluck_nabs_params.R")
 patient <- params$patient
-```
-
-## Test
-
-```{r test}
 test <- params$test
 test_name <- params$test_name
-```
-
-## Upload/attach PDF
-
-```{r choose}
-file <- file.path(params$file)
-```
-
-## Pages
-
-```{r pages}
 pages <- params$pages
-```
-
-```{r wfile}
-writeLines(file, here::here(patient, "pre_csv", "nabs_pdf"))
-```
-
-```{r, readfile, eval = FALSE}
-file <- readLines(here::here(patient, "pre_csv", "nabs_pdf"))
+# file <- file.path(file.choose())
+file <- file.path(params$file)
+saveRDS(file, "nabs.rds")
+# file <- readRDS("nabs.rds")
 ```
 
 ## Locate areas
@@ -292,14 +272,6 @@ area2 <- bwu::gpluck_locate_areas(
   file = file,
   pages = c(2, 5, 6, 7, 8, 8)
 )
-```
-
-```{r s-area}
-saveRDS(area, here::here(patient, "pre_csv", "area_nabs.rds"))
-```
-
-```{r r-area, eval=FALSE}
-area <- readRDS(here::here(patient, "pre_csv", "area_nabs.rds"))
 ```
 
 # Extract tables
@@ -393,9 +365,9 @@ if (params$test == "nabs") {
   table2[7, 1] <- c("Numbers & Letters Part D Efficiency")
   table2[8, 1] <- c("Driving Scenes")
 }
-table2[10, 5] <- 1
-table2[12, 5] <- 1
-table2[13, 5] <- 1
+# table2[10, 5] <- 1
+# table2[12, 5] <- 1
+# table2[13, 5] <- 1
 ```
 
 # NAB Language
@@ -426,7 +398,7 @@ if (params$test == "nabs") {
   table3[4, 1] <- c("Writing")
   table3[5, 1] <- c("Bill Payment")
 }
-table3[1, 5] <- 1
+# table3[1, 5] <- 1
 ```
 
 # NAB Memory
@@ -457,7 +429,7 @@ if (params$test == "nabs") {
   table4[4, 1] <- c("Story Learning Immediate Recall")
   table4[5, 1] <- c("Story Learning Delayed Recall")
   table4[6, 1] <- c("Story Learning Percent Retention")
-} else if (params$test == "nab") {
+} else if (params$test == "nab_main") {
   table4[1, 1] <- c("List Learning Immediate Recall")
   table4[2, 1] <- c("List Learning Short Delayed Recall")
   table4[3, 1] <- c("List Learning Long Delayed Recall")
@@ -723,6 +695,19 @@ table1 <-
 ```
 
 ```{r objects}
+shl <- c(
+  "Shape Learning Immediate Recognition",
+  "Shape Learning Delayed Recognition",
+  "Shape Learning Percent Retention"
+)
+stl <- c(
+  "Story Learning Immediate Recall",
+  "Story Learning Delayed Recall",
+  "Story Learning Percent Retention"
+)
+```
+
+```{r}
 orientation <- c(
   "Orientation",
   "Orientation to Self",
@@ -741,24 +726,14 @@ dsb <- c(
 nlt <- c(
   "Numbers & Letters Part A Speed",
   "Numbers & Letters Part A Efficiency",
-  "Numbers & Letters Part B Efficiency"
+  "Numbers & Letters Part B Efficiency",
+  "Numbers & Letters Part C Efficiency",
+  "Numbers & Letters Part D Efficiency"
 )
 nle <- c(
   "Numbers & Letters Part A Errors"
 )
-shl <- c(
-  "Shape Learning Immediate Recognition",
-  "Shape Learning Delayed Recognition",
-  "Shape Learning Percent Retention"
-)
-stl <- c(
-  "Story Learning Immediate Recall",
-  "Story Learning Delayed Recall",
-  "Story Learning Percent Retention"
-)
-```
 
-```{r subdomain2}
 table2 <-
   table2 |>
   dplyr::mutate(
@@ -1521,7 +1496,7 @@ for (i in 1:nrow(df)) {
 # Write final csv table
 
 ```{r write-out}
-readr::write_excel_csv(nabs, here::here("csv", "nabs.csv"), col_names = TRUE, na = "")
+readr::write_excel_csv(nabs, here::here("data", "csv", "nabs.csv"), col_names = TRUE, na = "")
 
 if (any(is.na(nabs$percentile))) {
   stop("STOP!!! NA value found in percentile column. Please fill in missing values.")
@@ -1533,6 +1508,6 @@ if (any(is.na(nabs$percentile))) {
 ```{r writeout-g}
 table <- nabs
 test <- "g2"
-file_path <- here::here("csv", paste0(test, ".csv"))
-readr::write_excel_csv(nabs, here::here("csv", "nabs.csv"), append = TRUE, na = "")
+file_path <- here::here("data", paste0(test, ".csv"))
+readr::write_excel_csv(nabs, here::here("data", "csv", "nabs.csv"), append = TRUE, na = "")
 ```
