--- a/template.qmd
+++ b/template.qmd
@@ -72,7 +72,7 @@ validity <- vroom::vroom("validity.csv")
 ```
 
 ```{=typst}
-#let name = [{{< var first_name >}} {{< var last_name >}}]
+#let name = [{{< var last_name >}}, {{< var first_name >}}]
 #let doe = [{{< var date_of_report >}}]
 #let patient = [{{< var patient >}}]
 #v(2em, weak: true)
@@ -89,7 +89,7 @@ validity <- vroom::vroom("validity.csv")
 
 <!-- {{< pagebreak >}} -->
 
-{{< include _01-00_nse.qmd >}}
+{{< include _01-00_nse_pediatric.qmd >}}
 
 <!-- {{< pagebreak >}} -->
 
