--- a/template.qmd
+++ b/template.qmd
@@ -78,9 +78,9 @@ validity <- vroom::vroom("validity.csv")
 #v(2em, weak: true)
 #show block: set par(leading: 0.65em)
 #block[
-*PATIENT NAME:* #name, Age {{< var age >}}  \
-*DATE OF BIRTH:* {{< var dob >}} \
-*DATE OF EXAM:* {{< var doe >}} \
+*PATIENT NAME:* #name \
+*DATE OF BIRTH:* {{< var dob >}}, Age {{< var age >}} \
+*DATES OF EXAM:* {{< var doe >}}, {{< var doe2 >}}, and {{< var doe3 >}} \
 *DATE OF REPORT*: {{< var date_of_report >}} \
 ]
 ```
@@ -93,9 +93,9 @@ validity <- vroom::vroom("validity.csv")
 
 <!-- {{< pagebreak >}} -->
 
-# NEUROCOGNITIVE FINDINGS {#sec-nt}
-
 {{< include _02-00_behav-obs.qmd >}}
+
+# NEUROCOGNITIVE FINDINGS {#sec-nt}
 
 {{< include _02-01_iq.qmd >}}
 
