--- a/_02-09_adhd_child.qmd
+++ b/_02-09_adhd_child.qmd
@@ -1,10 +1,4 @@
----
-format: 
-  typst:
-    keep_md: true
----
-
-## ADHD Symptoms and Executive Functioning {#sec-adhd}
+## ADHD/Executive Functioning {#sec-adhd}
 
 ```{r}
 #| label: setup-adhd
@@ -153,7 +147,18 @@ scales <- c(
   "Total ADHD Symptoms",
   "Oppositional Defiant Disorder Symptoms",
   "Conduct Disorder Symptoms",
-  "ADHD Index"
+  "ADHD Index",
+  ## CEFI
+  "Attention",
+  "Emotion Regulation",
+  "Flexibility",
+  "Inhibitory Control",
+  "Initiation",
+  "Organization",
+  "Full Scale",
+  "Planning",
+  "Self-Monitoring",
+  "Working Memory"
 )
 
 # Filter the data using the filter_data function from the bwu library
@@ -171,7 +176,7 @@ data_adhd <- bwu::filter_data(data, domain = domains, scale = scales)
 # Self-report
 data_adhd_self <-
   data_adhd |>
-  dplyr::filter(test == "conners4_self" | test == "cefi_sr" | test == "brown_efa_self") |>
+  dplyr::filter(test == "conners4_self" | test == "cefi_self" | test == "brown_efa_self" | test == "cefi_self_12-18") |>
   dplyr::arrange(dplyr::desc(percentile)) |>
   dplyr::distinct(.keep_all = FALSE)
 
@@ -188,7 +193,7 @@ bwu::cat_neuropsych_results(data = data_adhd_self, file = "_02-09_adhd_child_tex
 # Parent report
 data_adhd_parent <-
   data_adhd |>
-  dplyr::filter(test == "conners4_parent" | test == "cefi_or" | test == "brown_efa_parent") |>
+  dplyr::filter(test == "conners4_parent" | test == "cefi_parent" | test == "brown_efa_parent" | test == "cefi_parent_5-18") |>
   dplyr::distinct(.keep_all = FALSE)
 
 # Flatten the text
@@ -204,7 +209,7 @@ bwu::cat_neuropsych_results(data = data_adhd_parent, file = "_02-09_adhd_child_t
 # Parent report
 data_adhd_teacher <-
   data_adhd |>
-  dplyr::filter(test == "conners4_teacher" | test == "cefi_or" | test == "brown_efa_teacher") |>
+  dplyr::filter(test == "conners4_teacher" | test == "cefi_teacher" | test == "brown_efa_teacher") |>
   dplyr::distinct(.keep_all = FALSE)
 
 # Flatten the text
@@ -236,24 +241,24 @@ Higher scores reflect reduced functioning.")
 
 # groupings
 grp_adhd <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report"),
+  standard_score = c("CEFI Self", "CEFI Observer", "CEFI Parent"),
   t_score = c("Conners-4 Self", "Conners-4 Parent", "Conners-4 Teacher")
 )
 grp_conners4 <- list(
   t_score = c("Conners-4 Self", "Conners-4 Parent", "Conners-4 Teacher")
 )
 grp_cefi <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report")
+  standard_score = c("CEFI Self", "CEFI Observer", "CEFI Parent")
 )
 grp_self <- list(
-  standard_score = c("CEFI Self-Report"),
+  standard_score = c("CEFI Self"),
   t_score = c("Conners-4 Self", "Brown EF/A Self")
 )
 
 # redo this bc got sorted by pct
 data_adhd_self <-
   data_adhd |>
-  dplyr::filter(test == "conners4_self" | test == "cefi_sr" | test == "brown_efa_self") |>
+  dplyr::filter(test == "conners4_self" | test == "cefi_self" | test == "brown_efa_self" | test == "cefi_self_12-18") |>
   dplyr::distinct(.keep_all = FALSE)
 
 pheno <- "adhd_self"
@@ -288,7 +293,7 @@ vertical_padding <- 0
 multiline <- TRUE
 
 # footnotes
-fn_standard_score <- gt::md("CEFI Standard score: Mean = 100 [50th‰], SD ± 15
+fn_standard_score <- gt::md("Standard score: Mean = 100 [50th‰], SD ± 15
 [16th‰, 84th‰].
 
 Lower scores reflect reduced functioning.")
@@ -297,28 +302,40 @@ fn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
 
 Higher scores reflect reduced functioning.")
 
+# source notes
+sn_standard_score <- gt::md("Standard score: Mean = 100 [50th‰], SD ± 15
+[16th‰, 84th‰].
+
+Lower scores reflect reduced functioning.")
+
+sn_t_score <- gt::md("T-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
+
+Higher scores reflect reduced functioning.")
+
+source_note <- gt::md("_T_ score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+
 # groupings
 grp_adhd <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report"),
+  standard_score = c("CEFI Self", "CEFI Observer"),
   t_score = c("Conners-4 Self", "Conners-4 Parent", "Conners-4 Teacher")
 )
 grp_conners4 <- list(
   t_score = c("Conners-4 Self", "Conners-4 Parent", "Conners-4 Teacher")
 )
 grp_cefi <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report")
+  standard_score = c("CEFI Self", "CEFI Observer")
 )
 
 grp_parent <- list(
-  standard_score = c("CEFI Parent-Report"),
+  standard_score = c("CEFI Parent"),
   t_score = c("Conners-4 Parent", "Brown EF/A Parent")
 )
 
 # redo this bc got sorted by pct
-# data_adhd_parent <-
-#   data_adhd |>
-#   dplyr::filter(test == "conners4_parent" | test == "cefi_or" | test == "brown_efa_parent") |>
-#   dplyr::distinct(.keep_all = FALSE)
+data_adhd_parent <-
+  data_adhd |>
+  dplyr::filter(test == "conners4_parent" | test == "cefi_parent" | test == "brown_efa_parent" | test == "cefi_parent_5-18") |>
+  dplyr::distinct(.keep_all = FALSE)
 
 pheno <- "adhd_parent"
 
@@ -327,6 +344,7 @@ bwu::tbl_gt(
   data = data_adhd_parent,
   pheno = pheno,
   table_name = table_name,
+  source_note = sn_standard_score,
   fn_standard_score = fn_standard_score,
   fn_t_score = fn_t_score,
   grp_standard_score = grp_parent[["standard_score"]],
@@ -362,25 +380,25 @@ Higher scores reflect reduced functioning.")
 
 # groupings
 grp_adhd <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report"),
+  standard_score = c("CEFI Self", "CEFI Teacher"),
   t_score = c("Conners-4 Self", "Conners-4 Parent", "Conners-4 Teacher")
 )
 grp_cefi <- list(
-  standard_score = c("CEFI Self-Report", "CEFI Observer-Report")
+  standard_score = c("CEFI Self", "CEFI Teacher", "CEFI Parent")
 )
 grp_conners4 <- list(
   t_score = c("Conners-4 Self", "Conners-4 Parent", "Conners-4 Teacher")
 )
 
 grp_teacher <- list(
-  standard_score = c("CEFI Teacher-Report"),
+  standard_score = c("CEFI Teacher"),
   t_score = c("Conners-4 Teacher", "Brown EF/A Teacher")
 )
 
 # redo this bc got sorted by pct
 data_adhd_teacher <-
   data_adhd |>
-  dplyr::filter(test == "conners4_teacher" | test == "cefi_tr" | test == "brown_efa_teacher") |>
+  dplyr::filter(test == "conners4_teacher" | test == "cefi_teacher" | test == "brown_efa_teacher" | test == "cefi_teacher_5-18") |>
   dplyr::distinct(.keep_all = FALSE)
 
 pheno <- "adhd_teacher"
@@ -412,7 +430,6 @@ bwu::tbl_gt(
 filename <- "fig_adhd_self.svg"
 colors <- NULL
 return_plot <- TRUE
-# return_plot <- Sys.getenv("RETURN_PLOT")
 
 # dotplot variables to plot (x, y)
 x <- data_adhd_self$z
@@ -480,7 +497,7 @@ options(warn = 0) # Reset to default behavior
 # dotplot arguments
 filename <- "fig_adhd_teacher.svg"
 colors <- NULL
-return_plot <- Sys.getenv("RETURN_PLOT")
+return_plot <- TRUE
 
 # dotplot variables to plot (x, y)
 x <- data_adhd_teacher$z
@@ -503,11 +520,11 @@ bwu::dotplot(
 options(warn = 0) # Reset to default behavior
 ```
 
-### SELF-REPORT
+<!-- ### SELF-REPORT -->
 
-{{< include _02-09_adhd_child_text_self.qmd >}}
+<!-- {{< include _02-09_adhd_child_text_self.qmd >}} -->
 
-```{=typst}
+<!-- ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
   let font = (font: "Roboto Slab", size: 0.5em)
   set text(..font)
@@ -541,11 +558,11 @@ options(warn = 0) # Reset to default behavior
 #let file_qtbl = "table_adhd_self.png"
 #let file_fig = "fig_adhd_self.svg"
 #domain(title: [#title], file_qtbl, file_fig)
-```
+``` -->
 
 ### PARENT REPORT
 
-{{< include _02-09_adhd_child_text_self.qmd >}}
+{{< include _02-09_adhd_child_text_parent.qmd >}}
 
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
@@ -583,11 +600,11 @@ options(warn = 0) # Reset to default behavior
 #domain(title: [#title], file_qtbl, file_fig)
 ```
 
-### TEACHER REPORT
+<!-- ### TEACHER REPORT -->
 
-{{< include _02-09_adhd_child_text_teacher.qmd >}}
+<!-- {{< include _02-09_adhd_child_text_teacher.qmd >}} -->
 
-```{=typst}
+<!-- ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
   let font = (font: "Roboto Slab", size: 0.5em)
   set text(..font)
@@ -621,4 +638,4 @@ options(warn = 0) # Reset to default behavior
 #let file_qtbl = "table_adhd_teacher.png"
 #let file_fig = "fig_adhd_teacher.svg"
 #domain(title: [#title], file_qtbl, file_fig)
-```
+``` -->
